js/js.translator/testData/incremental/invalidationWithPL/removeSupertypeUsedFromConsumer/lib1/l1.0.kt
package sample

open class Base {
    open fun value(): Int = 0
}
